# claude-conversation-extractor

./: pyproject.toml  repomix-output.xml  setup.py
.github/workflows/: publish.yml  test.yml
doc/: impl-list-delete-find.md  list-delete-find.md
docs/: when-update-toml.md
goals/: log-format.md
goals/to-do/: think-realtime.md
src/: __init__.py  extract_claude_logs.py  extractor.py  session_resolver.py  think_realtime.py
src/claude_conversation_extractor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/claude_extractor/: __init__.py
src/claude_extractor/cli/: __init__.py  browser.py  interactive.py  listing.py  main.py  search.py
src/claude_extractor/core/: __init__.py  extractor.py  formatters.py  parser.py
src/claude_extractor/history/: manager.py
src/claude_extractor/monitor/: __init__.py  realtime_search.py  think.py
src/claude_extractor/search/: __init__.py  helpers.py  index.py  modes.py  searcher.py  semantic.py
src/claude_extractor/session/: __init__.py  discovery.py  loader.py  message.py  resolver.py
tests/: conftest.py  test_error_handling.py  test_extract_claude_logs_aligned.py  test_extract_comprehensive.py  test_extractor.py  test_interactive_ui.py  test_realtime_search_comprehensive.py  test_realtime_search_coverage.py  test_realtime_search_integration.py  test_realtime_search_threading.py  test_realtime_search_ui.py  test_realtime_search_unit.py  test_search.py  test_search_conversations_aligned.py  test_search_integration.py
