[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-conversation-extractor"
version = "1.2.0"
description = "Export Claude Code conversations from ~/.claude/projects. Extract, search, and backup Claude chat history to markdown files."
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Communications :: Chat",
    "Topic :: System :: Archiving :: Backup",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Natural Language :: English",
]
keywords = [
    "export-claude-code-conversations", "claude-conversation-extractor",
    "claude-code-export-tool", "backup-claude-code-logs", "save-claude-chat-history",
    "claude-jsonl-to-markdown", "extract-claude-sessions", "claude-code-no-export-button",
    "where-are-claude-code-logs-stored", "claude-terminal-logs", "anthropic-claude-code",
    "search-claude-conversations", "claude-code-logs-location", "~/.claude/projects",
    "export-claude-conversations", "extract-claude-code", "backup-claude-sessions"
]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
extract = "claude_extractor.cli.main:launch_interactive"
claude-extract = "claude_extractor.cli.main:launch_interactive"
claude-logs = "claude_extractor.cli.main:launch_interactive"
claude-start = "claude_extractor.cli.main:launch_interactive"
claude-search = "claude_extractor.cli.search:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]